--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="main.css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -15,23 +16,37 @@
   </style>
 </head>
 <body>
+  <div class="content">
+    <div class="card">
+        <div class="card-image">
+          <img src="images/illustration-hero.svg">
+        </div>
+        <div class="card-content" >
+           <h1>Order Summary</h1>
+           <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p> 
+           
+           <div class="way">
+              <div class="way-details">
+                <img src="images/icon-music.svg" alt="icon-music" class="icon-music">
+                <div>
+                  <strong>Anual Plan</strong>
+                  <p>$59.99/year</p>
+                </div> 
+              </div>
+              <a href="#" class="Change-link">Change</a>
+           </div>
+  
 
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+           <button class="Payment-button"><strong>Proceed to Payment</strong> </button> 
+           <button class="Order-button"><strong>Cancel Order</strong> </button> 
+         </div>
+       </div>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">TETA Saro Cindy</a>.
   </div>
+
 </body>
 </html>
